# kakadujs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-clang.sh  build-emscripten.sh  build-gcc.sh  build-native.sh  build-wasm.sh  build.sh
src/: CMakeLists.txt  HTJ2KDecoder.hpp  HTJ2KEncoder.hpp  jslib.cpp  stripe_decompressor_local.h
test/browser/: index.html
test/cpp/: CMakeLists.txt  main.cpp
test/fixtures/j2c/: CT1zzz.j2c
